@@ -290,13 +290,13 @@ trait Protocol extends Isabelle_Process
               val imports = header.imports.map(_.node)
               val keywords = header.keywords.map({ case (a, b, _) => (a, b) })
               // FIXME val uses = deps.uses.map(p => (Isabelle_System.posix_path(p._1), p._2))
-              val uses = header.uses
+              val files = header.files
               (Nil,
                 pair(Encode.string, pair(Encode.string, pair(list(Encode.string),
                   pair(list(pair(Encode.string,
                     option(pair(pair(Encode.string, list(Encode.string)), list(Encode.string))))),
-                  pair(list(pair(Encode.string, bool)), list(Encode.string))))))(
-                (dir, (name.theory, (imports, (keywords, (uses, header.errors))))))) },
+                  pair(list(Encode.string), list(Encode.string))))))(
+                (dir, (name.theory, (imports, (keywords, (files, header.errors))))))) },
           { case Document.Node.Perspective(a) => (a.commands.map(c => long_atom(c.id)), Nil) }))
       def encode_edits: T[List[Document.Edit_Command]] = list((node_edit: Document.Edit_Command) =>
       {
