@@ -12,8 +12,7 @@ theory Pure
     "attach" "begin" "binder" "constrains" "defines" "fixes" "for"
     "identifier" "if" "imports" "in" "includes" "infix" "infixl"
     "infixr" "is" "keywords" "notes" "obtains" "open" "output"
-    "overloaded" "pervasive" "shows" "structure" "unchecked" "uses"
-    "where" "|"
+    "overloaded" "pervasive" "shows" "structure" "unchecked" "where" "|"
   and "header" :: diag
   and "chapter" :: thy_heading1
   and "section" :: thy_heading2
